[project]
name = "JUS MULTIFRUIT NODES"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "JUS MULTIFRUIT", email = "jus@multi.fruit"}
]
keywords = ["comfyui", "custom nodes"]

dependencies = []

[project.urls]
Repository = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]